--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,8 +15,8 @@ jobs:
         uses: threeal/cmake-action@v2.1.0
         with:
           generator: Ninja
-          source-dir: src
+          source-dir: .
           build-dir: build
           options: |
-            BUILD_TESTS=ON
-            BUILD_EXAMPLES=ON
+            -DBUILD_TESTS=ON
+            -DBUILD_EXAMPLES=ON
