更新 CI 配置，添加测试步骤以验证 Sketch 功能

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,3 +20,8 @@ jobs:
           options: |
             -DBUILD_TESTS=ON
             -DBUILD_EXAMPLES=ON
+      
+      - name: Test Sketch
+        working-directory: build
+        run: ./tests/sketch_tests
+          
