更新 CI 配置，添加使测试二进制文件可执行的步骤

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,9 @@ jobs:
           name: build
           path: build/
 
+      - name: Make test binary executable
+        run: chmod +x build/tests/sketch_tests
+
       - name: Test Sketch
         working-directory: build
         run: ./tests/sketch_tests
