--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,9 @@ jobs:
           submodules: recursive
     
       - name: Install dependencies
-        run: sudo apt-get install -y libelf-dev zlib1g-dev
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libelf-dev zlib1g-dev llvm clang lld
     
       - name: Build bpftool
         run: |
