--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,13 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y libelf-dev zlib1g-dev llvm clang lld
+          wget https://apt.llvm.org/llvm.sh
+          chmod +x llvm.sh
+          sudo ./llvm.sh 20
+          sudo apt-get install -y libelf-dev zlib1g-dev clang-20 llvm-20 lld-20
+          sudo update-alternatives --install /usr/bin/clang clang /usr/bin/clang-20 100
+          sudo update-alternatives --install /usr/bin/llvm-strip llvm-strip /usr/bin/llvm-strip-20 100
+          sudo update-alternatives --install /usr/bin/lld lld /usr/bin/lld-20 100
     
       - name: Build bpftool
         run: |
@@ -44,7 +50,13 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y libelf-dev zlib1g-dev llvm clang lld libbpf-dev ninja-build
+          wget https://apt.llvm.org/llvm.sh
+          chmod +x llvm.sh
+          sudo ./llvm.sh 20
+          sudo apt-get install -y libelf-dev zlib1g-dev clang-20 llvm-20 lld-20 libbpf-dev ninja-build
+          sudo update-alternatives --install /usr/bin/clang clang /usr/bin/clang-20 100
+          sudo update-alternatives --install /usr/bin/llvm-strip llvm-strip /usr/bin/llvm-strip-20 100
+          sudo update-alternatives --install /usr/bin/lld lld /usr/bin/lld-20 100
 
       - name: Download bpftool artifact
         uses: actions/download-artifact@v4
