在 CI 工作流中添加 clang 和 llvm-config 版本验证步骤

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,6 +69,11 @@ jobs:
           chmod +x bpftool-bin/bpftool
           echo "$(pwd)/bpftool-bin" >> $GITHUB_PATH
 
+      - name: Verify clang version
+        run: |
+          clang --version
+          llvm-config --version
+
       - name: Build Project
         uses: threeal/cmake-action@v2.1.0
         with:
