--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,15 +18,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          wget https://apt.llvm.org/llvm.sh
-          chmod +x llvm.sh
-          sudo ./llvm.sh 20
-          sudo apt-get install -y libelf-dev zlib1g-dev clang-20 llvm-20 llvm-20-dev lld-20
-          sudo update-alternatives --install /usr/bin/clang clang /usr/bin/clang-20 200
-          sudo update-alternatives --install /usr/bin/clang++ clang++ /usr/bin/clang++-20 200
-          sudo update-alternatives --install /usr/bin/llvm-config llvm-config /usr/bin/llvm-config-20 200
-          sudo update-alternatives --install /usr/bin/llvm-strip llvm-strip /usr/bin/llvm-strip-20 200
-          sudo update-alternatives --install /usr/bin/lld lld /usr/bin/lld-20 200
+          sudo apt-get install -y libelf-dev zlib1g-dev llvm llvm-dev clang lld
     
       - name: Build bpftool
         run: |
@@ -52,15 +44,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          wget https://apt.llvm.org/llvm.sh
-          chmod +x llvm.sh
-          sudo ./llvm.sh 20
-          sudo apt-get install -y libelf-dev zlib1g-dev clang-20 llvm-20 llvm-20-dev lld-20 libbpf-dev ninja-build
-          sudo update-alternatives --install /usr/bin/clang clang /usr/bin/clang-20 200
-          sudo update-alternatives --install /usr/bin/clang++ clang++ /usr/bin/clang++-20 200
-          sudo update-alternatives --install /usr/bin/llvm-config llvm-config /usr/bin/llvm-config-20 200
-          sudo update-alternatives --install /usr/bin/llvm-strip llvm-strip /usr/bin/llvm-strip-20 200
-          sudo update-alternatives --install /usr/bin/lld lld /usr/bin/lld-20 200
+          sudo apt-get install -y libelf-dev zlib1g-dev llvm llvm-dev clang lld libbpf-dev ninja-build
 
       - name: Download bpftool artifact
         uses: actions/download-artifact@v4
@@ -76,9 +60,7 @@ jobs:
       - name: Verify clang version
         run: |
           clang --version
-          clang++ --version
           llvm-config --version
-          llvm-config-20 --version
 
       - name: Build Project
         uses: threeal/cmake-action@v2.1.0
