添加 .gitignore 文件并更新 CMakeLists.txt 以支持 SketchLib-dpdk 项目结构

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.16)
 
-project(helloworld LANGUAGES C CXX)
+project(SketchLib-dpdk LANGUAGES C CXX)
 
 set(CMAKE_C_COMPILER "clang")
 set(CMAKE_CXX_COMPILER "clang++")
@@ -17,4 +17,4 @@ pkg_check_modules(DPDK REQUIRED IMPORTED_TARGET libdpdk)
 add_compile_definitions(ALLOW_EXPERIMENTAL_API)
 
 # 子目录
-add_subdirectory(src/helloworld)
+add_subdirectory(src)
